--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "cookies": "^0.9.1",
     "next": "14.2.3",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-router-dom": "^6.23.1",
     "react-unity-webgl": "^9.5.2",
